# IRC-Chat.SA

./: .gitmodules  CMakeLists.txt  IRCChat.SA.ini  README.md
.github/workflows/: build-and-release.yml  build-releases.yml
src/: IRCClient.cpp  IRCClient.h  Main.cpp
src/util/: Config.cpp  Config.h
